[project]
name = "mongolia-drug-intel"
version = "6.0.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "httpx==0.28.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "apscheduler==3.11.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "deep-translator==1.11.4",
]

[tool.vercel]
entrypoint = "run:app"
